gen/com/intellij/rexx/RexxParser.java
// Generated from C:/Users/shchea/Documents/Projects/IntelliJ-Rexx/src/grammar\RexxParser.g4 by ANTLR 4.7
package com.intellij.rexx;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RexxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STMT_INCLUDE=1, LINE_COMMENT=2, BLOCK_COMMENT=3, WHISPACES=4, CONTINUATION=5, 
		KWD_ADDRESS=6, KWD_ALL=7, KWD_APPEND=8, KWD_ARG=9, KWD_BY=10, KWD_CALL=11, 
		KWD_COMMANDS=12, KWD_DIGITS=13, KWD_DO=14, KWD_DROP=15, KWD_ELSE=16, KWD_END=17, 
		KWD_ENGINEERING=18, KWD_ERROR=19, KWD_EXIT=20, KWD_EXPOSE=21, KWD_EXTERNAL=22, 
		KWD_FAILURE=23, KWD_FOR=24, KWD_FOREVER=25, KWD_FORM=26, KWD_FUZZ=27, 
		KWD_HALT=28, KWD_IF=29, KWD_INPUT=30, KWD_INTERMEDIATES=31, KWD_INTERPRET=32, 
		KWD_ITERATE=33, KWD_LABELS=34, KWD_LEAVE=35, KWD_LINEIN=36, KWD_NAME=37, 
		KWD_NOP=38, KWD_NORMAL=39, KWD_NOVALUE=40, KWD_NUMERIC=41, KWD_OFF=42, 
		KWD_ON=43, KWD_OPTIONS=44, KWD_OTHERWISE=45, KWD_OUTPUT=46, KWD_PARSE=47, 
		KWD_PROCEDURE=48, KWD_PULL=49, KWD_PUSH=50, KWD_QUEUE=51, KWD_REPLACE=52, 
		KWD_RETURN=53, KWD_RESULTS=54, KWD_SAY=55, KWD_SCIENTIFIC=56, KWD_SCAN=57, 
		KWD_SELECT=58, KWD_SIGNAL=59, KWD_SOURCE=60, KWD_STEM=61, KWD_STREAM=62, 
		KWD_SYNTAX=63, KWD_THEN=64, KWD_TO=65, KWD_TRACE=66, KWD_UNTIL=67, KWD_UPPER=68, 
		KWD_VALUE=69, KWD_VAR=70, KWD_VERSION=71, KWD_WHEN=72, KWD_WHILE=73, KWD_WITH=74, 
		BR_O=75, BR_C=76, SPECIAL_VAR=77, NUMBER=78, CONST_SYMBOL=79, VAR_SYMBOL=80, 
		STRING=81, CONCAT=82, EQ=83, PLUS=84, MINUS=85, MUL=86, DIV=87, QUOTINENT=88, 
		REMAINDER=89, POW=90, NOT=91, OR=92, XOR=93, AND=94, CMPS_Eq=95, CMPS_Neq=96, 
		CMPS_M=97, CMPS_L=98, CMPS_MEq=99, CMPS_LEq=100, CMPS_NM=101, CMPS_NL=102, 
		CMP_NEq=103, CMP_LM=104, CMP_ML=105, CMP_M=106, CMP_L=107, CMP_MEq=108, 
		CMP_LEq=109, CMP_NM=110, CMP_NL=111, STOP=112, COMMA=113, COLON=114, QUESTION=115, 
		EXCLAMATION=116, EOL=117, SEMICOL=118, UNSUPPORTED_CHARACTER=119;
	public static final int
		RULE_file = 0, RULE_program_ = 1, RULE_ncl = 2, RULE_null_clause = 3, 
		RULE_delim = 4, RULE_label_list = 5, RULE_label = 6, RULE_include_statement = 7, 
		RULE_instruction_list = 8, RULE_instruction = 9, RULE_single_instruction = 10, 
		RULE_assignment = 11, RULE_keyword_instruction = 12, RULE_command_ = 13, 
		RULE_group_ = 14, RULE_do_ = 15, RULE_do_ending = 16, RULE_if_ = 17, RULE_then_ = 18, 
		RULE_else_ = 19, RULE_select_ = 20, RULE_select_body = 21, RULE_when_ = 22, 
		RULE_otherwise_ = 23, RULE_address_ = 24, RULE_taken_constant = 25, RULE_valueexp = 26, 
		RULE_connection_ = 27, RULE_adio = 28, RULE_input = 29, RULE_resourcei = 30, 
		RULE_output = 31, RULE_resourceo = 32, RULE_adeo = 33, RULE_error = 34, 
		RULE_adei = 35, RULE_resources = 36, RULE_arg_ = 37, RULE_call_ = 38, 
		RULE_callon_spec = 39, RULE_callable_condition = 40, RULE_call_parms = 41, 
		RULE_expression_list = 42, RULE_do_specification = 43, RULE_do_simple = 44, 
		RULE_do_repetitive = 45, RULE_docond = 46, RULE_dorep = 47, RULE_docount = 48, 
		RULE_dobf = 49, RULE_dotf = 50, RULE_dotb = 51, RULE_dot = 52, RULE_dob = 53, 
		RULE_dof = 54, RULE_drop_ = 55, RULE_variable_list = 56, RULE_vref = 57, 
		RULE_var_symbol = 58, RULE_exit_ = 59, RULE_interpret_ = 60, RULE_iterate_ = 61, 
		RULE_leave_ = 62, RULE_nop_ = 63, RULE_numeric_ = 64, RULE_numeric_digits = 65, 
		RULE_numeric_form = 66, RULE_numeric_fuzz = 67, RULE_options_ = 68, RULE_parse_ = 69, 
		RULE_parse_type = 70, RULE_parse_key = 71, RULE_parse_value = 72, RULE_parse_var = 73, 
		RULE_procedure_ = 74, RULE_pull_ = 75, RULE_push_ = 76, RULE_queue_ = 77, 
		RULE_return_ = 78, RULE_say_ = 79, RULE_signal_ = 80, RULE_signal_spec = 81, 
		RULE_condition = 82, RULE_trace_ = 83, RULE_trace_options = 84, RULE_prefix_option = 85, 
		RULE_trace_option = 86, RULE_upper_ = 87, RULE_template_list = 88, RULE_template_ = 89, 
		RULE_target_ = 90, RULE_trigger_ = 91, RULE_pattern_ = 92, RULE_positional_ = 93, 
		RULE_absolute_positional = 94, RULE_position_ = 95, RULE_relative_positional = 96, 
		RULE_symbol = 97, RULE_expression = 98, RULE_or_operator = 99, RULE_and_expression = 100, 
		RULE_comparison = 101, RULE_comparison_operator = 102, RULE_normal_compare = 103, 
		RULE_strict_compare = 104, RULE_concatenation = 105, RULE_addition = 106, 
		RULE_additive_operator = 107, RULE_multiplication = 108, RULE_multiplicative_operator = 109, 
		RULE_power_expression = 110, RULE_prefix_expression = 111, RULE_term = 112, 
		RULE_function_ = 113, RULE_function_name = 114, RULE_function_parameters = 115;
	public static final String[] ruleNames = {
		"file", "program_", "ncl", "null_clause", "delim", "label_list", "label", 
		"include_statement", "instruction_list", "instruction", "single_instruction", 
		"assignment", "keyword_instruction", "command_", "group_", "do_", "do_ending", 
		"if_", "then_", "else_", "select_", "select_body", "when_", "otherwise_", 
		"address_", "taken_constant", "valueexp", "connection_", "adio", "input", 
		"resourcei", "output", "resourceo", "adeo", "error", "adei", "resources", 
		"arg_", "call_", "callon_spec", "callable_condition", "call_parms", "expression_list", 
		"do_specification", "do_simple", "do_repetitive", "docond", "dorep", "docount", 
		"dobf", "dotf", "dotb", "dot", "dob", "dof", "drop_", "variable_list", 
		"vref", "var_symbol", "exit_", "interpret_", "iterate_", "leave_", "nop_", 
		"numeric_", "numeric_digits", "numeric_form", "numeric_fuzz", "options_", 
		"parse_", "parse_type", "parse_key", "parse_value", "parse_var", "procedure_", 
		"pull_", "push_", "queue_", "return_", "say_", "signal_", "signal_spec", 
		"condition", "trace_", "trace_options", "prefix_option", "trace_option", 
		"upper_", "template_list", "template_", "target_", "trigger_", "pattern_", 
		"positional_", "absolute_positional", "position_", "relative_positional", 
		"symbol", "expression", "or_operator", "and_expression", "comparison", 
		"comparison_operator", "normal_compare", "strict_compare", "concatenation", 
		"addition", "additive_operator", "multiplication", "multiplicative_operator", 
		"power_expression", "prefix_expression", "term", "function_", "function_name", 
		"function_parameters"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "STMT_INCLUDE", "LINE_COMMENT", "BLOCK_COMMENT", "WHISPACES", "CONTINUATION", 
		"KWD_ADDRESS", "KWD_ALL", "KWD_APPEND", "KWD_ARG", "KWD_BY", "KWD_CALL", 
		"KWD_COMMANDS", "KWD_DIGITS", "KWD_DO", "KWD_DROP", "KWD_ELSE", "KWD_END", 
		"KWD_ENGINEERING", "KWD_ERROR", "KWD_EXIT", "KWD_EXPOSE", "KWD_EXTERNAL", 
		"KWD_FAILURE", "KWD_FOR", "KWD_FOREVER", "KWD_FORM", "KWD_FUZZ", "KWD_HALT", 
		"KWD_IF", "KWD_INPUT", "KWD_INTERMEDIATES", "KWD_INTERPRET", "KWD_ITERATE", 
		"KWD_LABELS", "KWD_LEAVE", "KWD_LINEIN", "KWD_NAME", "KWD_NOP", "KWD_NORMAL", 
		"KWD_NOVALUE", "KWD_NUMERIC", "KWD_OFF", "KWD_ON", "KWD_OPTIONS", "KWD_OTHERWISE", 
		"KWD_OUTPUT", "KWD_PARSE", "KWD_PROCEDURE", "KWD_PULL", "KWD_PUSH", "KWD_QUEUE", 
		"KWD_REPLACE", "KWD_RETURN", "KWD_RESULTS", "KWD_SAY", "KWD_SCIENTIFIC", 
		"KWD_SCAN", "KWD_SELECT", "KWD_SIGNAL", "KWD_SOURCE", "KWD_STEM", "KWD_STREAM", 
		"KWD_SYNTAX", "KWD_THEN", "KWD_TO", "KWD_TRACE", "KWD_UNTIL", "KWD_UPPER", 
		"KWD_VALUE", "KWD_VAR", "KWD_VERSION", "KWD_WHEN", "KWD_WHILE", "KWD_WITH", 
		"BR_O", "BR_C", "SPECIAL_VAR", "NUMBER", "CONST_SYMBOL", "VAR_SYMBOL", 
		"STRING", "CONCAT", "EQ", "PLUS", "MINUS", "MUL", "DIV", "QUOTINENT", 
		"REMAINDER", "POW", "NOT", "OR", "XOR", "AND", "CMPS_Eq", "CMPS_Neq", 
		"CMPS_M", "CMPS_L", "CMPS_MEq", "CMPS_LEq", "CMPS_NM", "CMPS_NL", "CMP_NEq", 
		"CMP_LM", "CMP_ML", "CMP_M", "CMP_L", "CMP_MEq", "CMP_LEq", "CMP_NM", 
		"CMP_NL", "STOP", "COMMA", "COLON", "QUESTION", "EXCLAMATION", "EOL", 
		"SEMICOL", "UNSUPPORTED_CHARACTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RexxParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RexxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public Program_Context program_() {
			return getRuleContext(Program_Context.class,0);
		}
		public TerminalNode EOF() { return getToken(RexxParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(232);
			program_();
			setState(233);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_Context extends ParserRuleContext {
		public NclContext ncl() {
			return getRuleContext(NclContext.class,0);
		}
		public Instruction_listContext instruction_list() {
			return getRuleContext(Instruction_listContext.class,0);
		}
		public Program_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).enterProgram_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).exitProgram_(this);
		}
	}

	public final Program_Context program_() throws RecognitionException {
		Program_Context _localctx = new Program_Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(236);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(235);
				ncl();
				}
				break;
			}
			setState(239);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KWD_ADDRESS) | (1L << KWD_ARG) | (1L << KWD_CALL) | (1L << KWD_DIGITS) | (1L << KWD_DO) | (1L << KWD_DROP) | (1L << KWD_EXIT) | (1L << KWD_FORM) | (1L << KWD_FUZZ) | (1L << KWD_IF) | (1L << KWD_INTERPRET) | (1L << KWD_ITERATE) | (1L << KWD_LEAVE) | (1L << KWD_NOP) | (1L << KWD_NUMERIC) | (1L << KWD_OPTIONS) | (1L << KWD_PARSE) | (1L << KWD_PROCEDURE) | (1L << KWD_PULL) | (1L << KWD_PUSH) | (1L << KWD_QUEUE) | (1L << KWD_RETURN) | (1L << KWD_SAY) | (1L << KWD_SELECT) | (1L << KWD_SIGNAL))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (KWD_TRACE - 66)) | (1L << (KWD_UPPER - 66)) | (1L << (KWD_VALUE - 66)) | (1L << (BR_O - 66)) | (1L << (SPECIAL_VAR - 66)) | (1L << (NUMBER - 66)) | (1L << (CONST_SYMBOL - 66)) | (1L << (VAR_SYMBOL - 66)) | (1L << (STRING - 66)) | (1L << (PLUS - 66)) | (1L << (MINUS - 66)) | (1L << (NOT - 66)))) != 0)) {
				{
				setState(238);
				instruction_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NclContext extends ParserRuleContext {
		public List<Null_clauseContext> null_clause() {
			return getRuleContexts(Null_clauseContext.class);
		}
		public Null_clauseContext null_clause(int i) {
			return getRuleContext(Null_clauseContext.class,i);
		}
		public NclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ncl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).enterNcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).exitNcl(this);
		}
	}

	public final NclContext ncl() throws RecognitionException {
		NclContext _localctx = new NclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ncl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(242); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(241);
					null_clause();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(244); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Null_clauseContext extends ParserRuleContext {
		public List<DelimContext> delim() {
			return getRuleContexts(DelimContext.class);
		}
		public DelimContext delim(int i) {
			return getRuleContext(DelimContext.class,i);
		}
		public Label_listContext label_list() {
			return getRuleContext(Label_listContext.class,0);
		}
		public Include_statementContext include_statement() {
			return getRuleContext(Include_statementContext.class,0);
		}
		public Null_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_null_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).enterNull_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).exitNull_clause(this);
		}
	}

	public final Null_clauseContext null_clause() throws RecognitionException {
		Null_clauseContext _localctx = new Null_clauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_null_clause);
		try {
			int _alt;
			setState(256);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOL:
			case SEMICOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(247); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(246);
						delim();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(249); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(252);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(251);
					label_list();
					}
					break;
				}
				}
				break;
			case NUMBER:
			case CONST_SYMBOL:
			case VAR_SYMBOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(254);
				label_list();
				}
				break;
			case STMT_INCLUDE:
				enterOuterAlt(_localctx, 3);
				{
				setState(255);
				include_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelimContext extends ParserRuleContext {
		public TerminalNode SEMICOL() { return getToken(RexxParser.SEMICOL, 0); }
		public TerminalNode EOL() { return getToken(RexxParser.EOL, 0); }
		public DelimContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delim; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).enterDelim(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).exitDelim(this);
		}
	}

	public final DelimContext delim() throws RecognitionException {
		DelimContext _localctx = new DelimContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_delim);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(258);
			_la = _input.LA(1);
			if ( !(_la==EOL || _la==SEMICOL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_listContext extends ParserRuleContext {
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(RexxParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(RexxParser.COLON, i);
		}
		public List<DelimContext> delim() {
			return getRuleContexts(DelimContext.class);
		}
		public DelimContext delim(int i) {
			return getRuleContext(DelimContext.class,i);
		}
		public Label_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).enterLabel_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RexxParserListener ) ((RexxParserListener)listener).exitLabel_list(this);
		}
	}
